# Software-Dev-for-Robotics

./: .gitignore  README.md
HW3_ws/install/: local_setup.sh  setup.sh
HW3_ws/log/: latest_build  latest_list  latest_test
HW3_ws/src/Q1/: package.xml  setup.cfg  setup.py
HW3_ws/src/py_pubsub/: package.xml  setup.py
fred_ws/install/: local_setup.sh  setup.sh
fred_ws/log/: latest_build  latest_list
fred_ws/src/my_test_controller/: setup.cfg  setup.py
hw3_ws/install/: local_setup.sh  setup.sh
hw3_ws/log/: latest_build  latest_list
hw3_ws/src/py_pubsub/: setup.py
hw3_ws/src/q1/: setup.cfg  setup.py
hw3_ws/src/q2/: package.xml  setup.cfg  setup.py
hw3_ws/src/q3/: package.xml  setup.cfg  setup.py
hw3_ws/src/turtorial_interfaces/: CMakeLists.txt  package.xml
hw4_ws/install/: local_setup.sh  setup.sh
hw4_ws/log/: latest_build  latest_list
hw4_ws/src/calculator/: package.xml  setup copy.py  setup.py
hw4_ws/src/custom_interfaces/: CMakeLists.txt
hw4_ws/src/custom_messages/: CMakeLists.txt  package.xml
hw4_ws/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
hw4_ws/src/log/: latest_build
hw4_ws/src/py_srvcli/: setup.py
hw4_ws/src/tutorial_interfaces/: CMakeLists.txt
hw5_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
hw5_ws/log/: latest_build  latest_list
hw5_ws/src/install/: setup.bash  (+4 more)
hw6_ws/install/: local_setup.sh  setup.sh
hw6_ws/log/: latest_build
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/log/: latest_build  latest_list  latest_test
(+572 files in other folders)
